crates/swc_ecma_parser/tests/errors/ts1106/input.js
let async;
for (async of [1]) ;